# macos_windows_cpp

./: .gitignore  CMakeLists.txt  main.cpp
data/: outFile2
primer/: Account.cpp  Account.h  Debug.cpp  Debug.h  LocalMath.cpp  LocalMath.h  Sales_data.cpp  Sales_data.h  Sales_item.h  Screen.h  WindowMgr.h  exercises.cpp  exercises.h  make_plural.cpp  make_plural.h
